osd: avoid watcher remains after "rados watch" is interrupted

If "rados watch" is interrupted (e.g. killed), rados watcher remains in osd.
The reason is that in do_osd_op_effects, session is nullptr (rados client is killed),
resulting in WatchTimeout is not registerd.

Fixes: https://tracker.ceph.com/issues/58120

Signed-off-by: weixinwei <weixw3@lenovo.com>