src/osd/Watch.cc
@@ -393,7 +393,13 @@ void Watch::connect(ConnectionRef con, bool _will_ping)
     last_ping = ceph_clock_now();
     register_cb();
   } else {
-    unregister_cb();
+    if (!con->get_priv()) {
+      // if session is already nullptr
+      // !will_ping should also register WatchTimeout
+      register_cb();
+    } else {
+      unregister_cb();
+    }
   }
 }
 
